3: Sudoku encode message

--- a/core/sudoku/templates/sudoku/base.html
+++ b/core/sudoku/templates/sudoku/base.html
@@ -42,7 +42,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2025 Proiect licență • Sudoku + Steganografie</p>
+    <p>&copy; 2025 Proiect • Sudoku + Steganografie</p>
 </footer>
 
 </body>
