4: Decoding the message

--- a/core/sudoku/templates/sudoku/base.html
+++ b/core/sudoku/templates/sudoku/base.html
@@ -30,7 +30,7 @@
     <h1>🧩 Sudoku Steganografie</h1>
     <nav>
         <a href="{% url 'encode' %}">Ascunde mesaj</a>
-        <a href="#">Decodează mesaj</a> <!-- îl adaugi când e gata -->
+        <a href="{% url 'decode' %}">Decodează mesaj</a> <!-- îl adaugi când e gata -->
         <a href="/">Acasă</a>
     </nav>
 </header>
