--- a/core/sudoku/templates/sudoku/encode_result.html
+++ b/core/sudoku/templates/sudoku/encode_result.html
@@ -1,20 +1,17 @@
 {% extends "sudoku/base.html" %}
 {% block content %}
-  <h2>Mesajul a fost ascuns într-un Sudoku!</h2>
+  <h2>Sudoku generat cu mesajul ascuns</h2>
+
   <p><strong>Mesaj:</strong> {{ message }}</p>
   <p><strong>Dificultate:</strong> {{ difficulty }}</p>
 
-  <table style="border-collapse: collapse;">
-    {% for row in sudoku %}
-      <tr>
-        {% for cell in row %}
-          <td style="border: 1px solid #000; width: 30px; height: 30px; text-align: center;">
-            {{ cell|default:" " }}
-          </td>
-        {% endfor %}
-      </tr>
-    {% endfor %}
-  </table>
+  <h3>Grilă Sudoku (copiază pentru decodare):</h3>
+  <textarea rows="10" cols="40" readonly>
+{% for row in sudoku %}
+{{ row|join:" " }}
+{% endfor %}
+  </textarea>
 
-  <a href="{% url 'encode' %}">Encodează alt mesaj</a>
+  <br><br>
+  <a href="{% url 'decode' %}">Decodează un mesaj</a>
 {% endblock %}
